[package]

name = "keyrusty"
version = "0.0.1"
authors = [ "Adam Young <adam@younglogic.com" ]
edition = "2018" 
[dependencies]
actix = "0.9"
actix-rt = "1.0.0"
http = "0.2.0"
futures = "0.3.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
json = "*"
rustls = "0.16"
actix-web = { version = "2.0.0", features=["rustls"] }
actix-files = "0.2.1"
env_logger = "0.5"